banner on mobile fixed, so we can scroll to see the whole banner

--- a/fully-banner/src/App.css
+++ b/fully-banner/src/App.css
@@ -56,7 +56,7 @@ body {
 }
 @media(max-width:500px){
 	.main-content{
-		/* overflow: auto; */
+		 overflow: auto; 
 		-webkit-overflow-scrolling: touch;
 	}
 }
